chore: m4 support