@@ -1,18 +1,6 @@
-FROM gcr.io/distroless/java21-debian12:nonroot
-# Healtcheck lokalt/test
-COPY --from=busybox:stable-musl /bin/wget /usr/bin/wget
-
-# Working dir for RUN, CMD, ENTRYPOINT, COPY and ADD (required because of nonroot user cannot run commands in root)
-WORKDIR /app
+FROM ghcr.io/navikt/fp-baseimages/distroless:21
 
 # Dependencies and config is bundled in jar file
 COPY domene/target/app.jar .
-
-ENV TZ=Europe/Oslo
-ENV JAVA_OPTS="-XX:MaxRAMPercentage=75 \
-    -XX:+PrintCommandLineFlags \
-    -XX:ActiveProcessorCount=2 \
-    -Duser.timezone=Europe/Oslo \
-    --add-opens java.base/java.time=ALL-UNNAMED"
 
 CMD ["app.jar"]
